--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core dependencies for Google ADK Agent
-google-cloud-functions-framework>=3.0.0
+functions-framework>=3.0.0
 google-genai>=0.1.0,<1.0.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
